crates/oxc_react_compiler/tests/snapshots/valid-new-date-array-length-holes.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-array-length-holes.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component(t0) {
	const $ = _c(2);
	let args;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		args = [];
		args.length = 1;
		$[0] = args;
	} else {
		args = $[0];
	}
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = new Date(...new Array(...args));
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
