crates/oxc_react_compiler/tests/snapshots/valid-new-date-chained-map-set.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-new-date-chained-map-set.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = new Date(...new Map().set(0, 0));
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
